# File_archiver

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
File_archiver/: CMakeLists.txt  File_archiver.cpp  File_archiver.h
